Atualização do Style.css

--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,16 @@
 
 
 #mainNav{
-	background-color: #3BCA9F
+	background-color: #0080FF
 }
 .nav-link{
-	color: black;
+	color: white;
 }
 .nav-link:{
-	color: black;
+	color: white;
 }
 .navbar-brand{
-	color: black;
+	color: white;
 }
 
 .form-control{
